--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example.maven-project</groupId>
-  <artifactId>devops</artifactId>
-  <packaging>war</packaging>
+  <artifactId>maven-project</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Maven Project</name>
-  <description>devops-project</description>
+  <description>Sample Maven project with a working, deployable site.</description>
   <url>http://www.example.com</url>
 
   <properties>
